--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* hero background image */
 .bgimage {
     height:100vh;
@@ -47,4 +48,20 @@
 /* display background color black on navbar scroll */
 .navbarScroll.navbarDark {
     background-color: black;
+}
+/* social media icons styling */
+.social-icons {
+    font-size: 36px;
+    cursor: pointer;
+}
+.fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover,.fa-linkedin:hover, .fa-twitch:hover {
+    color: #008000;
+}
+.fab {
+    color: #000000;
+}
+/* footer styling */
+#footer {
+    background-color: #808080;
+    text-align: center;
 }
