--- a/style.css
+++ b/style.css
@@ -1,25 +1,75 @@
 
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 /* hero background image */
+.custom-navbar {
+    background-color: #4b755b; /* Customize background color */
+    padding: 30px 0; /* Add padding for spacing */
+    color: #fff; /* Text color */
+    height: 80px;
+}
+
+.custom-navbar .logo {
+    float: left; /* Position logo to the left */
+}
+
+.custom-navbar .nav-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    float: right; /* Position navigation to the right */
+}
+
+.custom-navbar .nav-list li {
+    display: inline-block;
+    margin-left: 20px; /* Add spacing between navigation items */
+}
+
+.custom-navbar .nav-list a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s ease;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.custom-navbar .nav-list a:hover {
+    color: #ff6347; /* Customize hover color */
+}
+
 .bgimage {
     height:100vh;
-    background: url('images/heroImage.jpg');
+    background-color: #000000;
     background-size:cover;
     position:relative;
 }
 /* text css above hero image*/
 .hero_title {
     font-size: 4.5rem;
+    padding-left: 10rem;
 }
-.hero_desc {
+
+.hero_desc1 {
+    text-align: right;
+    font-size: 2rem;
+}
+.hero_desc2 {
+    text-align: right;
     font-size: 2rem;
 }
 .hero-text {
-    text-align: center;
+    text-align: right;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+}
+
+.hero_image{
+    align-items: center;
+    border-radius: 50%;
 }
 /* about section image css */
 .imageAboutPage {
@@ -82,7 +132,8 @@
     background-color: black;
 }
 /* social media icons styling */
-.social-icons {
+.social-icons a { 
+    color: #fff;
     font-size: 36px;
     cursor: pointer;
 }
@@ -92,9 +143,14 @@
 .fab {
     color: #000000;
 }
+.map-google{
+    padding: 50px;
+
+}
 /* footer styling */
-#footer {
-    background-color: #808080;
+footer {
+    background-color: #4b755b; /* Green color */
+    padding: 10px 0; /* Adjust padding as needed */
     text-align: center;
 }
 
@@ -139,4 +195,16 @@
   .slide {
     flex: 0 0 100%;
     text-align: center;
+  }
+
+  .social-icons {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+
+  }
+
+  .fab {
+    
+    padding: 20px;
   }
